add Who Matters project

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 								<ul>
 									<li><a href="KE.html">Knowledge Explorer</a></li>
 									<li><a href="Meteore.html">Météore</a></li>
+									<li><a href="WhoMatters.html">Who Matters</a></li>
 									<li><a href="contact.html">Contact</a></li>
 									<li><a href="elements.html">Elements</a></li>
 									<li>
@@ -48,7 +49,7 @@
 					<h2>"Charles" Yu Lin Chung</h2>
 					<p>Welcome to my universe</p>
 					<ul class="actions special">
-						<li><a href="#" class="button primary">Portfolio</a></li>
+						<li><a href="#Portfolio" class="button primary">Portfolio</a></li>
 						<li><a href="#main" class="button">About Me</a></li>
 					</ul>
 				</section>
@@ -63,39 +64,47 @@
 							for doing stuff with your phone</h2>
 							<p> Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare
 							adipiscing nunc adipiscing. Condimentum turpis massa.</p>
-							<p><img width="20%" class="image left" src="images/profile.jpg" alt="" /> Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare
+							<p><img class="image left round" src="images/profile.jpg" alt="" /> Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare
 							adipiscing nunc adipiscing. Condimentum turpis massa.</p>
 						</header>
 						<!--span><img width="20%" float="left" src="images/profile.jpg" alt="" /></span-->
 					</section>
 
-					<section class="box special features">
+					<section class="box special">
 						<div class="features-row">
 							<section>
 								<!--span class="icon major fa-bolt accent2"></span-->
-								<img class="image round" src="images/profile.png" alt=""/>
-								<h3>Magna etiam</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<img class="image round" src="images/Logo/nctu_logo.png" alt=""/>
+								<h3>Research Assisstant at National Chiao Tung University (NCTU)</h3>
+								<p></p>
 							</section>
 							<section>
-								<span class="icon major fa-area-chart accent3"></span>
-								<h3>Ipsum dolor</h3>
+								<!--span class="icon major fa-area-chart accent3"></span-->
+								<img class="image round2" src="images/Logo/LiU.png" alt=""/>
+								<h3>Summer Academy at Linköpiny University</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
 						</div>
 						<div class="features-row">
 							<section>
-								<span class="icon major fa-cloud accent4"></span>
-								<h3>Sed feugiat</h3>
+								<!--span class="icon major fa-cloud accent4"></span-->
+								<img class="image round2" src="images/Logo/D2.png" alt=""/>
+								<h3>App UX Tester and QA engineer Summer Intern at D2 Technologies</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
 							<section>
-								<span class="icon major fa-lock accent5"></span>
-								<h3>Enim phasellus</h3>
+								<!--span class="icon major fa-lock accent5"></span-->
+								<img class="image round" src="images/Logo/nthu-logo.png" alt=""/>
+								<h3>BA Computer Science, National Tsing Hua University (NTHU)</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
 						</div>
 					</section>
+					<div class="box special" id="Portfolio">
+						<header class="major">
+							<h2>Protfolio</h2>
+						</header>
+					</div>
 
 					<div class="row">
 						<div class="col-6 col-12-narrower">
