revise home page

--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
-								<h3>Sed lorem adipiscing</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<span class="image featured"><img height="250" src="images/Meteore.png" alt="" /></span>
+								<h3>Météore</h3>
+								<p>Project Background : Course Project<br>Project semester : 2016 Fall<br>Community makes a small action BIG.<br>We design a social platform that everyone owns a planet in the galaxy. Users generated their individual or public goals and share them to the community...
 								<ul class="actions special">
-									<li><a href="#" class="button alt">Learn More</a></li>
+									<li><a href="Meteore.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 
@@ -122,11 +122,25 @@
 						<div class="col-6 col-12-narrower">
 
 							<section class="box special">
-								<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
-								<h3>Accumsan integer</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<span class="image featured"><img height="250" src="images/KEConcept.png" alt="" /></span>
+								<h3>Knowledge Explorer</h3>
+								<p>Project Background : Course Project<br>Project date : 2017 Fall<br>ACollaborative Concept Mapping System for Improving Online How-To Knowledge Transfer.<br>Imagine a scenario that you are searching for tutorial for cooking an Omelette on the Internet...</p>
 								<ul class="actions special">
-									<li><a href="#" class="button alt">Learn More</a></li>
+									<li><a href="KE.html" class="button alt">Learn More</a></li>
+								</ul>
+							</section>
+
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-6 col-12-narrower">
+
+							<section class="box special">
+								<span class="image featured"><img height="250" src="images/WhoMatters.png" alt="" /></span>
+								<h3>Who Matters</h3>
+								<p>Project Background : Research Project<br>Project date : 2017.12 - present<br>Project supervisor : Dr. "Stanley" Yung-Ju Chang<br>Under Reviewing of CHI’19<br>Understanding the Impact of Relationship Characteristics on Receptivity to Mobile IM Messages.<br></p>
+								<ul class="actions special">
+									<li><a href="WhoMatters.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 
