--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							<section>
 								<!--span class="icon major fa-area-chart accent3"></span-->
 								<img class="image round2" src="images/Logo/LiU.png" alt=""/>
-								<h3>Summer Academy at Linköpiny University</h3>
+								<h3>Summer Academy at Linköping University</h3>
 								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
 							</section>
 						</div>
@@ -100,9 +100,9 @@
 							</section>
 						</div>
 					</section>
-					<div class="box special" id="Portfolio">
+					<div class="box special" style="background: #e89980;" id="Portfolio">
 						<header class="major">
-							<h2>Protfolio</h2>
+							<h2 style="color: #f9e6df;">Portfolio</h2>
 						</header>
 					</div>
 
