--- a/KE.html
+++ b/KE.html
@@ -53,7 +53,10 @@
 						<h4>Project Background : Course Project</h4>
 						<h4>Project date : 2017 Fall</h4>
 						<h4>Project duration : 3 months</h4>
+						<h4>Project supervisor : Dr. Hao-Chuan Wang</h4>
 						<h4>Audience : On-line how-to knowledge learners | On-line how-to knowledge tutors</h4>
+						<h4>Demo in NTU IoX Center Workshop on Augmented Collective Beings, 2017</h4>
+						<h4>A group project</h4>
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>What's the issue</h3>
