--- a/WhoMatters.html
+++ b/WhoMatters.html
@@ -55,7 +55,8 @@
 						<h4>Project duration : 1 year</h4>
 						<h4>Project supervisor : Dr. "Stanley" Yung-Ju Chang </h4>
 						<h4>Authorship : Hao-Ping Lee, Kuan-Yin Chen, Chih-Heng Lin, Chia-Yu Chen, <b>Yu-Lin Chung</b>, Yung-Ju Chang, Chien Ru Sun</h4>
-						<h4>Under Reviewing of CHI’19</h4>
+						<h4>Submitted to CHI’19</h4>
+						<h4>A group project</h4>
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>What's the issue</h3>
@@ -64,7 +65,7 @@
 							<div class="row-6 row-12-mobilep">
 								<h3>How we address the issue</h3>
 								<p>In order to study the impact of relationship characteristics on users’ receptivity to mobile IM messages, we focus on a subset of characteristics of relationship between two people that are measurable via self-reports and IM logs. They include Closeness, Dependence, Mobile Maintenance Expectation (MME), Answering Expectation (AE) and Perceived Obligation to Answering (POA).</p>
-								<p><img class="image left round" src="images/esm.png" alt="" />Our general research question is: <b>when considering activity context, social context, phone interaction context, and ringer mode, to what extent these measures of relationship characteristics respectively affect the four receptivity measures.</b> We use four sources to obtain these measures: existing scales, self-report from experience sampling method (ESM), sensor data from the phone, and message logs.</p>
+								<p><img class="image left round" src="images/esm.png" alt=""/>Our general research question is: <b>when considering activity context, social context, phone interaction context, and ringer mode, to what extent these measures of relationship characteristics respectively affect the four receptivity measures.</b> We use four sources to obtain these measures: existing scales, self-report from experience sampling method (ESM), sensor data from the phone, and message logs.</p>
 							</div>
 							<div class="row-6 row-12-mobilep">
 								<h3>What we find</h3>
