--- a/index.html
+++ b/index.html
@@ -16,27 +16,17 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">Taipei, Taiwan</a></h1>
+					<h1><a href="index.html">Charles from Hsinchu, Taiwan</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li>
-								<a href="#" class="icon fa-angle-down">Layouts</a>
+								<a href="#" class="icon fa-angle-down">Projects</a>
 								<ul>
 									<li><a href="KE.html">Knowledge Explorer</a></li>
 									<li><a href="Meteore.html">Météore</a></li>
 									<li><a href="WhoMatters.html">Who Matters</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
+									<li><a href="Insightgram.html">Insight-gram</a></li>
 								</ul>
 							</li>
 							<li><a href="#" class="button">繁體中文</a></li>
@@ -59,13 +49,19 @@
 
 					<section class="box special">
 						<header class="major">
-							<h2>Introducing the ultimate mobile app
-							<br />
-							for doing stuff with your phone</h2>
-							<p> Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare
-							adipiscing nunc adipiscing. Condimentum turpis massa.</p>
-							<p><img class="image left round" src="images/profile.jpg" alt="" /> Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare
-							adipiscing nunc adipiscing. Condimentum turpis massa.</p>
+							<h2>Building a world that brings us closer <br>to each other,and to ourselves.</h2>
+							<p> Engineer | Researcher | Designer of Human-Computer Interaction</p>
+							<p><img class="image left round2" src="images/profile.jpg" alt=""/> Though old saying "Technology Humanity", do the technologies nowadays bring more humanity to us? AI and ML allows computers to reach further, but how could we really use these breakthroughs to enrich people? I place myself in the gap between technology and humanity, my mission is to augment human with the technology, as well as with the deep understanding and concerning of humanity.
+							</p>
+							<ul class="icons">
+								<li><a style="font-size: 2em;" class="icon">Contact Me @</a></li>
+								<li><a href="https://www.linkedin.com/in/%E7%A5%90%E9%9C%96-%E9%8D%BE-5bb7b6164/?locale=en_US" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://github.com/thatcharles" class="icon fa-github"><span class="label">Github</span></a></li>
+								<!--li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li-->
+								<!--li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li-->
+								<li><a href="mailto: that_charles@gapp.nthu.edu.tw" class="icon fa-envelope "><span class="label">Gmail</span></a></li>
+							</ul>
+							
 						</header>
 						<!--span><img width="20%" float="left" src="images/profile.jpg" alt="" /></span-->
 					</section>
@@ -76,13 +72,18 @@
 								<!--span class="icon major fa-bolt accent2"></span-->
 								<img class="image round" src="images/Logo/nctu_logo.png" alt=""/>
 								<h3>Research Assisstant at National Chiao Tung University (NCTU)</h3>
-								<p></p>
+								<p>February 2018 - Present<br>Hsinchu, Taiwan
+								<ul>
+									<li>Researching mobile related human-computer interaction topics especially using the technique of ubiquitous computing</li>
+									<li>Conducting research focusing on mobile computer-mediated communication (CMC), and mobile augmented reality(AR) pedestrian navigation here</li>
+								</ul>
 							</section>
 							<section>
 								<!--span class="icon major fa-area-chart accent3"></span-->
 								<img class="image round2" src="images/Logo/LiU.png" alt=""/>
 								<h3>Summer Academy at Linköping University</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<p>Summer 2017<br>Linköping, Sweden</p>
+								<p>Summer academy with course credits—Studied Innovation and Entrepreneurship in a Swedish Context.</p>
 							</section>
 						</div>
 						<div class="features-row">
@@ -90,19 +91,25 @@
 								<!--span class="icon major fa-cloud accent4"></span-->
 								<img class="image round2" src="images/Logo/D2.png" alt=""/>
 								<h3>App UX Tester and QA engineer Summer Intern at D2 Technologies</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<p>Summer 2016 as App UX Tester and front end developer<br>Summer 2017 as QA engineer<br>Hsinchu, Taiwan</p>
+								<ul> 
+									<li>Front end designer & mobile application UX tester</li>
+									<li>Drew the layout of official website, please visit:<a href="https://www.d2tech.com/">https://www.d2tech.com/</a></li>
+								</ul>
+								
 							</section>
 							<section>
 								<!--span class="icon major fa-lock accent5"></span-->
 								<img class="image round" src="images/Logo/nthu-logo.png" alt=""/>
 								<h3>BA Computer Science, National Tsing Hua University (NTHU)</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<p>Fall 2014 - Spring 2018<br>Hsinchu, Taiwan</p>
+								<p>Relevant Courses:<br>Data Structures (A), Data Science (A+), Machine Learning (A+), Introduction to Massive Data Analysis (A), Social Computing Application Design (A), User Experience and Usability Evaluation (A+), Applied Quantitative Methods for Human-Computer Interaction (A+)</p>
 							</section>
 						</div>
 					</section>
-					<div class="box special" style="background: #e89980;" id="Portfolio">
+					<div class="box special" style="background-image: url('images/pic01.jpg')" id="Portfolio">
 						<header class="major">
-							<h2 style="color: #f9e6df;">Portfolio</h2>
+							<h2 style="color: #ffffff;">Portfolio</h2>
 						</header>
 					</div>
 
@@ -124,7 +131,7 @@
 							<section class="box special">
 								<span class="image featured"><img height="250" src="images/KEConcept.png" alt="" /></span>
 								<h3>Knowledge Explorer</h3>
-								<p>Project Background : Course Project<br>Project date : 2017 Fall<br>ACollaborative Concept Mapping System for Improving Online How-To Knowledge Transfer.<br>Imagine a scenario that you are searching for tutorial for cooking an Omelette on the Internet...</p>
+								<p>Project Background : Course Project<br>Project date : 2017 Fall<br>Project supervisor : Dr. Hao-Chuan Wang<br>ACollaborative Concept Mapping System for Improving Online How-To Knowledge Transfer.<br>Imagine a scenario that you are searching for tutorial...</p>
 								<ul class="actions special">
 									<li><a href="KE.html" class="button alt">Learn More</a></li>
 								</ul>
@@ -138,9 +145,22 @@
 							<section class="box special">
 								<span class="image featured"><img height="250" src="images/WhoMatters.png" alt="" /></span>
 								<h3>Who Matters</h3>
-								<p>Project Background : Research Project<br>Project date : 2017.12 - present<br>Project supervisor : Dr. "Stanley" Yung-Ju Chang<br>Under Reviewing of CHI’19<br>Understanding the Impact of Relationship Characteristics on Receptivity to Mobile IM Messages.<br></p>
+								<p>Project Background : Research Project<br>Project date : 2017.12 - present<br>Project supervisor : Dr. "Stanley" Yung-Ju Chang<br>Submitted to CHI’19<br>Understanding the Impact of Relationship Characteristics on Receptivity to Mobile IM Messages.<br></p>
 								<ul class="actions special">
 									<li><a href="WhoMatters.html" class="button alt">Learn More</a></li>
+								</ul>
+							</section>
+
+						</div>
+
+						<div class="col-6 col-12-narrower">
+
+							<section class="box special">
+								<span class="image featured"><img height="250" src="images/InsightCover.png" alt="" /></span>
+								<h3>Insight-gram</h3>
+								<p>Project Background : Course Project<br>Project date : 2018.06<br>We crawled and extracted keywords from posts with location tags on Instagram, since trends on instagram satifies the endemic and transient characteristics. We then cluster posts with similar keywords together...</p>
+								<ul class="actions special">
+									<li><a href="Insightgram.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 
@@ -171,15 +191,12 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+						<li><a href="https://www.linkedin.com/in/%E7%A5%90%E9%9C%96-%E9%8D%BE-5bb7b6164/?locale=en_US" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://github.com/thatcharles" class="icon fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto: that_charles@gapp.nthu.edu.tw" class="icon fa-envelope "><span class="label">Gmail</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a>, <a href="#">Charles Chung</a></li>
 					</ul>
 				</footer>
 
