--- a/Insightgram.html
+++ b/Insightgram.html
@@ -70,7 +70,7 @@
 								<p>We crawled and extracted keywords from posts with location tags on Instagram, since trends on instagram satifies the endemic and transient characteristics. We then cluster posts with similar keywords together. At the same time, we utilize CNN to predict the emotion of the photos. After the analysis, we used word cloud to visualize our findings.</p>
 							</div>
 						</div>
-						<span class="image featured"><img src="images/insightgramMap.png" alt="" /></span>
+						<span class="image featured"><img src="images/insightgramMap.jpg" alt="" /></span>
 						<div class="row">
 							<div class="row-6 row-12-mobilep">
 								<h3>What we find</h3>
