add Usability project

--- a/Insightgram.html
+++ b/Insightgram.html
@@ -46,7 +46,7 @@
 				<section id="main" class="container">
 					<header>
 						<h2>Insight-gram</h2>
-						<p></p>
+						<p>A Data Visualization and Machine Learning Porject</p>
 					</header>
 					<div class="box">
 						<span class="image featured"><img src="images/InsightCover.png" alt="" /></span>
