add VUI project

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 									<li><a href="WhoMatters.html">Who Matters</a></li>
 									<li><a href="Insightgram.html">Insight-gram</a></li>
 									<li><a href="HopeEnglish.html">Usability Evaluation</a></li>
+									<li><a href="VUI.html">Charles Bot</a></li>
 								</ul>
 							</li>
 							<li><a href="#" class="button">繁體中文</a></li>
@@ -173,9 +174,20 @@
 							<section class="box special">
 								<span class="image featured"><img height="250" src="images/UsabilityImage.png" alt="" /></span>
 								<h3>User Experience and Usability Evaluation for Hope English</h3>
-								<p>Project Background : Course Project<br>Project date : 2018.2 - 2018.6 <br>Project supervisor : Hope English's CFO, Jasper Chang & Dr. "Stanley" Yung-Ju Chang<br>We conducted a comprehensive evaluation on the mobile app of Hope English, the leading brand of English...</p>
+								<p>Project Background : Course Project<br>Project date : 2018.2 - 2018.6 <br>Project supervisor : Hope English's CFO, Jasper Chang & Dr. "Stanley" Yung-Ju Chang<br></p>
 								<ul class="actions special">
 									<li><a href="HopeEnglish.html" class="button alt">Learn More</a></li>
+								</ul>
+							</section>
+						</div>
+						<div class="col-6 col-12-narrower">
+
+							<section class="box special">
+								<span class="image featured"><img height="250" src="images/VUIFront.png" alt="" /></span>
+								<h3>Charles Bot</h3>
+								<p>Project Background : Side Project<br>Project date : 2018.4 - 2018.6<br>A Hands-Free, Eyes-Free Voice User Interface on Android devices<br>People frequently use mobile phone and constantly to stay in touch with others. With the existing method...</p>
+								<ul class="actions special">
+									<li><a href="VUI.html" class="button alt">Learn More</a></li>
 								</ul>
 							</section>
 
