add survey cake

--- a/index.html
+++ b/index.html
@@ -198,21 +198,20 @@
 
 			<!-- CTA -->
 				<section id="cta">
+					<h2>Contact Me</h2>
+					<p>Send me message if you have any question about me, I'll reply you via email.</p>
 
-					<h2>Sign up for beta access</h2>
-					<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
-
-					<form>
-						<div class="row gtr-50 gtr-uniform">
-							<div class="col-8 col-12-mobilep">
+						<!--div class="row gtr-50 gtr-uniform"-->
+							<!--div class="col-8 col-12-mobilep">
 								<input type="email" name="email" id="email" placeholder="Email Address" />
 							</div>
 							<div class="col-4 col-12-mobilep">
 								<input type="submit" value="Sign Up" class="fit" />
+							</div-->
+							<div align="center" class="col-4 col-12-mobilep">
+								<iframe width='650' height='300' src='https://www.surveycake.com/s/w4mRe' style='overflow:hidden;border:#ddd 10px solid;' allowTransparency='false' frameborder='0'> </iframe>
 							</div>
-						</div>
-					</form>
-
+						<!--/div-->
 				</section>
 
 			<!-- Footer -->
